final/compilator/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression instruction
Rule 2     expression -> instruction
Rule 3     instruction -> LCURLY expression RCURLY
Rule 4     instruction -> line SEMICOLON
Rule 5     instruction -> for_state
Rule 6     instruction -> ifelse_state
Rule 7     instruction -> while_state
Rule 8     line -> assign
Rule 9     line -> PRINT print_state
Rule 10    line -> BREAK
Rule 11    line -> CONTINUE
Rule 12    line -> RETURN print_state
Rule 13    line -> RETURN
Rule 14    print_state -> operation COMMA print_state
Rule 15    print_state -> operation
Rule 16    assign -> object ASSIGN operation
Rule 17    assign -> object ADDASSIGN operation
Rule 18    assign -> object SUBASSIGN operation
Rule 19    assign -> object MULASSIGN operation
Rule 20    assign -> object DIVASSIGN operation
Rule 21    operation -> LPAREN operation RPAREN
Rule 22    operation -> operation PLUS operation
Rule 23    operation -> operation MINUS operation
Rule 24    operation -> operation TIMES operation
Rule 25    operation -> operation DIVIDE operation
Rule 26    operation -> operation DOTADD operation
Rule 27    operation -> operation DOTSUB operation
Rule 28    operation -> operation DOTMUL operation
Rule 29    operation -> operation DOTDIV operation
Rule 30    operation -> MINUS operation
Rule 31    operation -> operation TRANSPOSE
Rule 32    operation -> EYE LPAREN operation RPAREN
Rule 33    operation -> ZEROS LPAREN operation RPAREN
Rule 34    operation -> ONES LPAREN operation RPAREN
Rule 35    operation -> object
Rule 36    operation -> number
Rule 37    operation -> matrix
Rule 38    bool -> LPAREN bool RPAREN
Rule 39    bool -> operation MORE operation
Rule 40    bool -> operation LESS operation
Rule 41    bool -> operation MOREOREQ operation
Rule 42    bool -> operation LESSOREQ operation
Rule 43    bool -> operation EQUALS operation
Rule 44    bool -> operation NOTEQUALS operation
Rule 45    object -> ID vector
Rule 46    object -> ID
Rule 47    ifelse_state -> IF LPAREN bool RPAREN instruction
Rule 48    ifelse_state -> IF LPAREN bool RPAREN instruction ELSE instruction
Rule 49    while_state -> WHILE LPAREN bool RPAREN instruction
Rule 50    for_state -> FOR ID ASSIGN operation COLON operation instruction
Rule 51    matrix -> LSQUAR row RSQUAR
Rule 52    row -> row COMMA vector
Rule 53    row -> vector
Rule 54    vector -> LSQUAR elem RSQUAR
Rule 55    elem -> elem COMMA number
Rule 56    elem -> number
Rule 57    number -> INT
Rule 58    number -> FLOAT
Rule 59    number -> STRING

Terminals, with rules where they appear

ADDASSIGN            : 17
ASSIGN               : 16 50
BREAK                : 10
COLON                : 50
COMMA                : 14 52 55
CONTINUE             : 11
DIVASSIGN            : 20
DIVIDE               : 25
DOTADD               : 26
DOTDIV               : 29
DOTMUL               : 28
DOTSUB               : 27
ELSE                 : 48
EQUALS               : 43
EYE                  : 32
FLOAT                : 58
FOR                  : 50
ID                   : 45 46 50
IF                   : 47 48
INT                  : 57
LCURLY               : 3
LESS                 : 40
LESSOREQ             : 42
LPAREN               : 21 32 33 34 38 47 48 49
LSQUAR               : 51 54
MINUS                : 23 30
MORE                 : 39
MOREOREQ             : 41
MULASSIGN            : 19
NOTEQUALS            : 44
ONES                 : 34
PLUS                 : 22
PRINT                : 9
RCURLY               : 3
RETURN               : 12 13
RPAREN               : 21 32 33 34 38 47 48 49
RSQUAR               : 51 54
SEMICOLON            : 4
STRING               : 59
SUBASSIGN            : 18
TIMES                : 24
TRANSPOSE            : 31
WHILE                : 49
ZEROS                : 33
error                : 

Nonterminals, with rules where they appear

assign               : 8
bool                 : 38 47 48 49
elem                 : 54 55
expression           : 1 3 0
for_state            : 5
ifelse_state         : 6
instruction          : 1 2 47 48 48 49 50
line                 : 4
matrix               : 37
number               : 36 55 56
object               : 16 17 18 19 20 35
operation            : 14 15 16 17 18 19 20 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31 32 33 34 39 39 40 40 41 41 42 42 43 43 44 44 50 50
print_state          : 9 12 14
row                  : 51 52
vector               : 45 52 53
while_state          : 7

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression instruction
    (2) expression -> . instruction
    (3) instruction -> . LCURLY expression RCURLY
    (4) instruction -> . line SEMICOLON
    (5) instruction -> . for_state
    (6) instruction -> . ifelse_state
    (7) instruction -> . while_state
    (8) line -> . assign
    (9) line -> . PRINT print_state
    (10) line -> . BREAK
    (11) line -> . CONTINUE
    (12) line -> . RETURN print_state
    (13) line -> . RETURN
    (50) for_state -> . FOR ID ASSIGN operation COLON operation instruction
    (47) ifelse_state -> . IF LPAREN bool RPAREN instruction
    (48) ifelse_state -> . IF LPAREN bool RPAREN instruction ELSE instruction
    (49) while_state -> . WHILE LPAREN bool RPAREN instruction
    (16) assign -> . object ASSIGN operation
    (17) assign -> . object ADDASSIGN operation
    (18) assign -> . object SUBASSIGN operation
    (19) assign -> . object MULASSIGN operation
    (20) assign -> . object DIVASSIGN operation
    (45) object -> . ID vector
    (46) object -> . ID

    LCURLY          shift and go to state 3
    PRINT           shift and go to state 9
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    FOR             shift and go to state 13
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    ID              shift and go to state 14

    expression                     shift and go to state 1
    instruction                    shift and go to state 2
    line                           shift and go to state 4
    for_state                      shift and go to state 5
    ifelse_state                   shift and go to state 6
    while_state                    shift and go to state 7
    assign                         shift and go to state 8
    object                         shift and go to state 17

state 1

    (0) S' -> expression .
    (1) expression -> expression . instruction
    (3) instruction -> . LCURLY expression RCURLY
    (4) instruction -> . line SEMICOLON
    (5) instruction -> . for_state
    (6) instruction -> . ifelse_state
    (7) instruction -> . while_state
    (8) line -> . assign
    (9) line -> . PRINT print_state
    (10) line -> . BREAK
    (11) line -> . CONTINUE
    (12) line -> . RETURN print_state
    (13) line -> . RETURN
    (50) for_state -> . FOR ID ASSIGN operation COLON operation instruction
    (47) ifelse_state -> . IF LPAREN bool RPAREN instruction
    (48) ifelse_state -> . IF LPAREN bool RPAREN instruction ELSE instruction
    (49) while_state -> . WHILE LPAREN bool RPAREN instruction
    (16) assign -> . object ASSIGN operation
    (17) assign -> . object ADDASSIGN operation
    (18) assign -> . object SUBASSIGN operation
    (19) assign -> . object MULASSIGN operation
    (20) assign -> . object DIVASSIGN operation
    (45) object -> . ID vector
    (46) object -> . ID

    LCURLY          shift and go to state 3
    PRINT           shift and go to state 9
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    FOR             shift and go to state 13
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    ID              shift and go to state 14

    instruction                    shift and go to state 18
    line                           shift and go to state 4
    for_state                      shift and go to state 5
    ifelse_state                   shift and go to state 6
    while_state                    shift and go to state 7
    assign                         shift and go to state 8
    object                         shift and go to state 17

state 2

    (2) expression -> instruction .

    LCURLY          reduce using rule 2 (expression -> instruction .)
    PRINT           reduce using rule 2 (expression -> instruction .)
    BREAK           reduce using rule 2 (expression -> instruction .)
    CONTINUE        reduce using rule 2 (expression -> instruction .)
    RETURN          reduce using rule 2 (expression -> instruction .)
    FOR             reduce using rule 2 (expression -> instruction .)
    IF              reduce using rule 2 (expression -> instruction .)
    WHILE           reduce using rule 2 (expression -> instruction .)
    ID              reduce using rule 2 (expression -> instruction .)
    $end            reduce using rule 2 (expression -> instruction .)
    RCURLY          reduce using rule 2 (expression -> instruction .)


state 3

    (3) instruction -> LCURLY . expression RCURLY
    (1) expression -> . expression instruction
    (2) expression -> . instruction
    (3) instruction -> . LCURLY expression RCURLY
    (4) instruction -> . line SEMICOLON
    (5) instruction -> . for_state
    (6) instruction -> . ifelse_state
    (7) instruction -> . while_state
    (8) line -> . assign
    (9) line -> . PRINT print_state
    (10) line -> . BREAK
    (11) line -> . CONTINUE
    (12) line -> . RETURN print_state
    (13) line -> . RETURN
    (50) for_state -> . FOR ID ASSIGN operation COLON operation instruction
    (47) ifelse_state -> . IF LPAREN bool RPAREN instruction
    (48) ifelse_state -> . IF LPAREN bool RPAREN instruction ELSE instruction
    (49) while_state -> . WHILE LPAREN bool RPAREN instruction
    (16) assign -> . object ASSIGN operation
    (17) assign -> . object ADDASSIGN operation
    (18) assign -> . object SUBASSIGN operation
    (19) assign -> . object MULASSIGN operation
    (20) assign -> . object DIVASSIGN operation
    (45) object -> . ID vector
    (46) object -> . ID

    LCURLY          shift and go to state 3
    PRINT           shift and go to state 9
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    FOR             shift and go to state 13
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    ID              shift and go to state 14

    expression                     shift and go to state 19
    instruction                    shift and go to state 2
    line                           shift and go to state 4
    for_state                      shift and go to state 5
    ifelse_state                   shift and go to state 6
    while_state                    shift and go to state 7
    assign                         shift and go to state 8
    object                         shift and go to state 17

state 4

    (4) instruction -> line . SEMICOLON

    SEMICOLON       shift and go to state 20


state 5

    (5) instruction -> for_state .

    LCURLY          reduce using rule 5 (instruction -> for_state .)
    PRINT           reduce using rule 5 (instruction -> for_state .)
    BREAK           reduce using rule 5 (instruction -> for_state .)
    CONTINUE        reduce using rule 5 (instruction -> for_state .)
    RETURN          reduce using rule 5 (instruction -> for_state .)
    FOR             reduce using rule 5 (instruction -> for_state .)
    IF              reduce using rule 5 (instruction -> for_state .)
    WHILE           reduce using rule 5 (instruction -> for_state .)
    ID              reduce using rule 5 (instruction -> for_state .)
    $end            reduce using rule 5 (instruction -> for_state .)
    RCURLY          reduce using rule 5 (instruction -> for_state .)
    ELSE            reduce using rule 5 (instruction -> for_state .)


state 6

    (6) instruction -> ifelse_state .

    LCURLY          reduce using rule 6 (instruction -> ifelse_state .)
    PRINT           reduce using rule 6 (instruction -> ifelse_state .)
    BREAK           reduce using rule 6 (instruction -> ifelse_state .)
    CONTINUE        reduce using rule 6 (instruction -> ifelse_state .)
    RETURN          reduce using rule 6 (instruction -> ifelse_state .)
    FOR             reduce using rule 6 (instruction -> ifelse_state .)
    IF              reduce using rule 6 (instruction -> ifelse_state .)
    WHILE           reduce using rule 6 (instruction -> ifelse_state .)
    ID              reduce using rule 6 (instruction -> ifelse_state .)
    $end            reduce using rule 6 (instruction -> ifelse_state .)
    RCURLY          reduce using rule 6 (instruction -> ifelse_state .)
    ELSE            reduce using rule 6 (instruction -> ifelse_state .)


state 7

    (7) instruction -> while_state .

    LCURLY          reduce using rule 7 (instruction -> while_state .)
    PRINT           reduce using rule 7 (instruction -> while_state .)
    BREAK           reduce using rule 7 (instruction -> while_state .)
    CONTINUE        reduce using rule 7 (instruction -> while_state .)
    RETURN          reduce using rule 7 (instruction -> while_state .)
    FOR             reduce using rule 7 (instruction -> while_state .)
    IF              reduce using rule 7 (instruction -> while_state .)
    WHILE           reduce using rule 7 (instruction -> while_state .)
    ID              reduce using rule 7 (instruction -> while_state .)
    $end            reduce using rule 7 (instruction -> while_state .)
    RCURLY          reduce using rule 7 (instruction -> while_state .)
    ELSE            reduce using rule 7 (instruction -> while_state .)


state 8

    (8) line -> assign .

    SEMICOLON       reduce using rule 8 (line -> assign .)


state 9

    (9) line -> PRINT . print_state
    (14) print_state -> . operation COMMA print_state
    (15) print_state -> . operation
    (21) operation -> . LPAREN operation RPAREN
    (22) operation -> . operation PLUS operation
    (23) operation -> . operation MINUS operation
    (24) operation -> . operation TIMES operation
    (25) operation -> . operation DIVIDE operation
    (26) operation -> . operation DOTADD operation
    (27) operation -> . operation DOTSUB operation
    (28) operation -> . operation DOTMUL operation
    (29) operation -> . operation DOTDIV operation
    (30) operation -> . MINUS operation
    (31) operation -> . operation TRANSPOSE
    (32) operation -> . EYE LPAREN operation RPAREN
    (33) operation -> . ZEROS LPAREN operation RPAREN
    (34) operation -> . ONES LPAREN operation RPAREN
    (35) operation -> . object
    (36) operation -> . number
    (37) operation -> . matrix
    (45) object -> . ID vector
    (46) object -> . ID
    (57) number -> . INT
    (58) number -> . FLOAT
    (59) number -> . STRING
    (51) matrix -> . LSQUAR row RSQUAR

    LPAREN          shift and go to state 23
    MINUS           shift and go to state 24
    EYE             shift and go to state 25
    ZEROS           shift and go to state 26
    ONES            shift and go to state 27
    ID              shift and go to state 14
    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    STRING          shift and go to state 33
    LSQUAR          shift and go to state 34

    print_state                    shift and go to state 21
    operation                      shift and go to state 22
    object                         shift and go to state 28
    number                         shift and go to state 29
    matrix                         shift and go to state 30

state 10

    (10) line -> BREAK .

    SEMICOLON       reduce using rule 10 (line -> BREAK .)


state 11

    (11) line -> CONTINUE .

    SEMICOLON       reduce using rule 11 (line -> CONTINUE .)


state 12

    (12) line -> RETURN . print_state
    (13) line -> RETURN .
    (14) print_state -> . operation COMMA print_state
    (15) print_state -> . operation
    (21) operation -> . LPAREN operation RPAREN
    (22) operation -> . operation PLUS operation
    (23) operation -> . operation MINUS operation
    (24) operation -> . operation TIMES operation
    (25) operation -> . operation DIVIDE operation
    (26) operation -> . operation DOTADD operation
    (27) operation -> . operation DOTSUB operation
    (28) operation -> . operation DOTMUL operation
    (29) operation -> . operation DOTDIV operation
    (30) operation -> . MINUS operation
    (31) operation -> . operation TRANSPOSE
    (32) operation -> . EYE LPAREN operation RPAREN
    (33) operation -> . ZEROS LPAREN operation RPAREN
    (34) operation -> . ONES LPAREN operation RPAREN
    (35) operation -> . object
    (36) operation -> . number
    (37) operation -> . matrix
    (45) object -> . ID vector
    (46) object -> . ID
    (57) number -> . INT
    (58) number -> . FLOAT
    (59) number -> . STRING
    (51) matrix -> . LSQUAR row RSQUAR

    SEMICOLON       reduce using rule 13 (line -> RETURN .)
    LPAREN          shift and go to state 23
    MINUS           shift and go to state 24
    EYE             shift and go to state 25
    ZEROS           shift and go to state 26
    ONES            shift and go to state 27
    ID              shift and go to state 14
    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    STRING          shift and go to state 33
    LSQUAR          shift and go to state 34

    print_state                    shift and go to state 35
    operation                      shift and go to state 22
    object                         shift and go to state 28
    number                         shift and go to state 29
    matrix                         shift and go to state 30

state 13

    (50) for_state -> FOR . ID ASSIGN operation COLON operation instruction

    ID              shift and go to state 36


state 14

    (45) object -> ID . vector
    (46) object -> ID .
    (54) vector -> . LSQUAR elem RSQUAR

    ASSIGN          reduce using rule 46 (object -> ID .)
    ADDASSIGN       reduce using rule 46 (object -> ID .)
    SUBASSIGN       reduce using rule 46 (object -> ID .)
    MULASSIGN       reduce using rule 46 (object -> ID .)
    DIVASSIGN       reduce using rule 46 (object -> ID .)
    COMMA           reduce using rule 46 (object -> ID .)
    PLUS            reduce using rule 46 (object -> ID .)
    MINUS           reduce using rule 46 (object -> ID .)
    TIMES           reduce using rule 46 (object -> ID .)
    DIVIDE          reduce using rule 46 (object -> ID .)
    DOTADD          reduce using rule 46 (object -> ID .)
    DOTSUB          reduce using rule 46 (object -> ID .)
    DOTMUL          reduce using rule 46 (object -> ID .)
    DOTDIV          reduce using rule 46 (object -> ID .)
    TRANSPOSE       reduce using rule 46 (object -> ID .)
    SEMICOLON       reduce using rule 46 (object -> ID .)
    RPAREN          reduce using rule 46 (object -> ID .)
    MORE            reduce using rule 46 (object -> ID .)
    LESS            reduce using rule 46 (object -> ID .)
    MOREOREQ        reduce using rule 46 (object -> ID .)
    LESSOREQ        reduce using rule 46 (object -> ID .)
    EQUALS          reduce using rule 46 (object -> ID .)
    NOTEQUALS       reduce using rule 46 (object -> ID .)
    COLON           reduce using rule 46 (object -> ID .)
    LCURLY          reduce using rule 46 (object -> ID .)
    PRINT           reduce using rule 46 (object -> ID .)
    BREAK           reduce using rule 46 (object -> ID .)
    CONTINUE        reduce using rule 46 (object -> ID .)
    RETURN          reduce using rule 46 (object -> ID .)
    FOR             reduce using rule 46 (object -> ID .)
    IF              reduce using rule 46 (object -> ID .)
    WHILE           reduce using rule 46 (object -> ID .)
    ID              reduce using rule 46 (object -> ID .)
    LSQUAR          shift and go to state 38

    vector                         shift and go to state 37

state 15

    (47) ifelse_state -> IF . LPAREN bool RPAREN instruction
    (48) ifelse_state -> IF . LPAREN bool RPAREN instruction ELSE instruction

    LPAREN          shift and go to state 39


state 16

    (49) while_state -> WHILE . LPAREN bool RPAREN instruction

    LPAREN          shift and go to state 40


state 17

    (16) assign -> object . ASSIGN operation
    (17) assign -> object . ADDASSIGN operation
    (18) assign -> object . SUBASSIGN operation
    (19) assign -> object . MULASSIGN operation
    (20) assign -> object . DIVASSIGN operation

    ASSIGN          shift and go to state 41
    ADDASSIGN       shift and go to state 42
    SUBASSIGN       shift and go to state 43
    MULASSIGN       shift and go to state 44
    DIVASSIGN       shift and go to state 45


state 18

    (1) expression -> expression instruction .

    LCURLY          reduce using rule 1 (expression -> expression instruction .)
    PRINT           reduce using rule 1 (expression -> expression instruction .)
    BREAK           reduce using rule 1 (expression -> expression instruction .)
    CONTINUE        reduce using rule 1 (expression -> expression instruction .)
    RETURN          reduce using rule 1 (expression -> expression instruction .)
    FOR             reduce using rule 1 (expression -> expression instruction .)
    IF              reduce using rule 1 (expression -> expression instruction .)
    WHILE           reduce using rule 1 (expression -> expression instruction .)
    ID              reduce using rule 1 (expression -> expression instruction .)
    $end            reduce using rule 1 (expression -> expression instruction .)
    RCURLY          reduce using rule 1 (expression -> expression instruction .)


state 19

    (3) instruction -> LCURLY expression . RCURLY
    (1) expression -> expression . instruction
    (3) instruction -> . LCURLY expression RCURLY
    (4) instruction -> . line SEMICOLON
    (5) instruction -> . for_state
    (6) instruction -> . ifelse_state
    (7) instruction -> . while_state
    (8) line -> . assign
    (9) line -> . PRINT print_state
    (10) line -> . BREAK
    (11) line -> . CONTINUE
    (12) line -> . RETURN print_state
    (13) line -> . RETURN
    (50) for_state -> . FOR ID ASSIGN operation COLON operation instruction
    (47) ifelse_state -> . IF LPAREN bool RPAREN instruction
    (48) ifelse_state -> . IF LPAREN bool RPAREN instruction ELSE instruction
    (49) while_state -> . WHILE LPAREN bool RPAREN instruction
    (16) assign -> . object ASSIGN operation
    (17) assign -> . object ADDASSIGN operation
    (18) assign -> . object SUBASSIGN operation
    (19) assign -> . object MULASSIGN operation
    (20) assign -> . object DIVASSIGN operation
    (45) object -> . ID vector
    (46) object -> . ID

    RCURLY          shift and go to state 46
    LCURLY          shift and go to state 3
    PRINT           shift and go to state 9
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    FOR             shift and go to state 13
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    ID              shift and go to state 14

    instruction                    shift and go to state 18
    line                           shift and go to state 4
    for_state                      shift and go to state 5
    ifelse_state                   shift and go to state 6
    while_state                    shift and go to state 7
    assign                         shift and go to state 8
    object                         shift and go to state 17

state 20

    (4) instruction -> line SEMICOLON .

    LCURLY          reduce using rule 4 (instruction -> line SEMICOLON .)
    PRINT           reduce using rule 4 (instruction -> line SEMICOLON .)
    BREAK           reduce using rule 4 (instruction -> line SEMICOLON .)
    CONTINUE        reduce using rule 4 (instruction -> line SEMICOLON .)
    RETURN          reduce using rule 4 (instruction -> line SEMICOLON .)
    FOR             reduce using rule 4 (instruction -> line SEMICOLON .)
    IF              reduce using rule 4 (instruction -> line SEMICOLON .)
    WHILE           reduce using rule 4 (instruction -> line SEMICOLON .)
    ID              reduce using rule 4 (instruction -> line SEMICOLON .)
    $end            reduce using rule 4 (instruction -> line SEMICOLON .)
    RCURLY          reduce using rule 4 (instruction -> line SEMICOLON .)
    ELSE            reduce using rule 4 (instruction -> line SEMICOLON .)


state 21

    (9) line -> PRINT print_state .

    SEMICOLON       reduce using rule 9 (line -> PRINT print_state .)


state 22

    (14) print_state -> operation . COMMA print_state
    (15) print_state -> operation .
    (22) operation -> operation . PLUS operation
    (23) operation -> operation . MINUS operation
    (24) operation -> operation . TIMES operation
    (25) operation -> operation . DIVIDE operation
    (26) operation -> operation . DOTADD operation
    (27) operation -> operation . DOTSUB operation
    (28) operation -> operation . DOTMUL operation
    (29) operation -> operation . DOTDIV operation
    (31) operation -> operation . TRANSPOSE

    COMMA           shift and go to state 47
    SEMICOLON       reduce using rule 15 (print_state -> operation .)
    PLUS            shift and go to state 48
    MINUS           shift and go to state 49
    TIMES           shift and go to state 50
    DIVIDE          shift and go to state 51
    DOTADD          shift and go to state 52
    DOTSUB          shift and go to state 53
    DOTMUL          shift and go to state 54
    DOTDIV          shift and go to state 55
    TRANSPOSE       shift and go to state 56


state 23

    (21) operation -> LPAREN . operation RPAREN
    (21) operation -> . LPAREN operation RPAREN
    (22) operation -> . operation PLUS operation
    (23) operation -> . operation MINUS operation
    (24) operation -> . operation TIMES operation
    (25) operation -> . operation DIVIDE operation
    (26) operation -> . operation DOTADD operation
    (27) operation -> . operation DOTSUB operation
    (28) operation -> . operation DOTMUL operation
    (29) operation -> . operation DOTDIV operation
    (30) operation -> . MINUS operation
    (31) operation -> . operation TRANSPOSE
    (32) operation -> . EYE LPAREN operation RPAREN
    (33) operation -> . ZEROS LPAREN operation RPAREN
    (34) operation -> . ONES LPAREN operation RPAREN
    (35) operation -> . object
    (36) operation -> . number
    (37) operation -> . matrix
    (45) object -> . ID vector
    (46) object -> . ID
    (57) number -> . INT
    (58) number -> . FLOAT
    (59) number -> . STRING
    (51) matrix -> . LSQUAR row RSQUAR

    LPAREN          shift and go to state 23
    MINUS           shift and go to state 24
    EYE             shift and go to state 25
    ZEROS           shift and go to state 26
    ONES            shift and go to state 27
    ID              shift and go to state 14
    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    STRING          shift and go to state 33
    LSQUAR          shift and go to state 34

    operation                      shift and go to state 57
    object                         shift and go to state 28
    number                         shift and go to state 29
    matrix                         shift and go to state 30

state 24

    (30) operation -> MINUS . operation
    (21) operation -> . LPAREN operation RPAREN
    (22) operation -> . operation PLUS operation
    (23) operation -> . operation MINUS operation
    (24) operation -> . operation TIMES operation
    (25) operation -> . operation DIVIDE operation
    (26) operation -> . operation DOTADD operation
    (27) operation -> . operation DOTSUB operation
    (28) operation -> . operation DOTMUL operation
    (29) operation -> . operation DOTDIV operation
    (30) operation -> . MINUS operation
    (31) operation -> . operation TRANSPOSE
    (32) operation -> . EYE LPAREN operation RPAREN
    (33) operation -> . ZEROS LPAREN operation RPAREN
    (34) operation -> . ONES LPAREN operation RPAREN
    (35) operation -> . object
    (36) operation -> . number
    (37) operation -> . matrix
    (45) object -> . ID vector
    (46) object -> . ID
    (57) number -> . INT
    (58) number -> . FLOAT
    (59) number -> . STRING
    (51) matrix -> . LSQUAR row RSQUAR

    LPAREN          shift and go to state 23
    MINUS           shift and go to state 24
    EYE             shift and go to state 25
    ZEROS           shift and go to state 26
    ONES            shift and go to state 27
    ID              shift and go to state 14
    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    STRING          shift and go to state 33
    LSQUAR          shift and go to state 34

    operation                      shift and go to state 58
    object                         shift and go to state 28
    number                         shift and go to state 29
    matrix                         shift and go to state 30

state 25

    (32) operation -> EYE . LPAREN operation RPAREN

    LPAREN          shift and go to state 59


state 26

    (33) operation -> ZEROS . LPAREN operation RPAREN

    LPAREN          shift and go to state 60


state 27

    (34) operation -> ONES . LPAREN operation RPAREN

    LPAREN          shift and go to state 61


state 28

    (35) operation -> object .
